# repolens

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LAUNCH.md  LICENSE  PUBLISHING.md  README.md  USAGE.md  pyproject.toml
docs/: FINGERPRINTS.md  code-mapping.md  llm-providers.md
docs/superpowers/plans/: 2026-05-22-PLAN-codemap.md  2026-05-22-PLAN-docs.md  2026-05-22-PLAN-llm.md  2026-05-22-PLAN-smart.md
docs/superpowers/specs/: 2026-05-22-v0.5.0-design.md
examples/: classify.py  with_llm_anthropic.py  with_llm_openai.py
src/app_classifier/: __init__.py  agent.py  classifier.py  cli.py  hosting.py  smart.py  web_server_vulns.py
src/app_classifier/codemap/: __init__.py  file_deps.py  py_calls.py  types.py
src/app_classifier/data/: web_server_cves.json
src/app_classifier/llm/: __init__.py  _http.py  config.py  provider.py
src/app_classifier/llm/adapters/: __init__.py  anthropic.py  ollama.py  openai.py  openai_compat.py  openrouter.py
tests/: test_agent.py  test_classifier.py  test_codemap_file_deps.py  test_codemap_py_calls.py  test_codemap_types.py  test_llm_adapters.py  test_llm_config.py  test_llm_http.py  test_readme_quickstart.py  test_smart.py
tests/fixtures/admin_express/: package.json  server.js
tests/fixtures/ai_llm_app/: README.md  requirements.txt
tests/fixtures/ai_llm_app/app/: main.py
tests/fixtures/blog_flask/: README.md  app.py  requirements.txt
tests/fixtures/cli_tool/: README.md  package.json
tests/fixtures/cli_tool/tests/: routes.test.js
tests/fixtures/dvwa_php/: README.md  index.php  login.php  setup.php
tests/fixtures/ecommerce_django/: README.md  requirements.txt
tests/fixtures/ecommerce_django/shop/: models.py  urls.py
tests/fixtures/go_service/: go.mod  handler.go  main.go
tests/fixtures/java_spring/: pom.xml
tests/fixtures/java_spring/src/main/java/com/example/: Controller.java  Util.java
tests/fixtures/laravel_app/: README.md  composer.json
tests/fixtures/monorepo_two_apps/: package.json
tests/fixtures/monorepo_two_apps/api/: requirements.txt
tests/fixtures/monorepo_two_apps/frontend/: package.json
tests/fixtures/ruby_sinatra/: app.rb  helpers.rb
